--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ django = "*"
 djangorestframework = "*"
 markdown = "*"
 django-filter = "*"
+django-rest-auth = "*"
+django-allauth = "*"
 
 [requires]
 python_version = "3.7"
